--- a/pom.xml
+++ b/pom.xml
@@ -4,49 +4,40 @@
 
   <groupId>io.github.veerakumarak</groupId>
   <artifactId>jsend</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
-  <name>jsend</name>
+  <name>${project.groupId}:${project.artifactId}</name>
   <description>JSend implementation in java</description>
   <url>https://github.com/veerakumarak/java-jsend</url>
 
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Veera Kumar</name>
+      <email>veerakumarak@gmail.com</email>
+    </developer>
+  </developers>
+
   <scm>
-    <url>https://github.com/veerakumarak/java-jsend</url>
+    <url>https://github.com/veerakumarak/java-jsend/tree/master</url>
     <connection>scm:git:git://github.com/veerakumarak/java-jsend.git</connection>
     <developerConnection>scm:git:git@github.com:veerakumarak/java-jsend.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
-  <developers>
-    <developer>
-      <email>veerakumarak@gmail.com</email>
-      <name>Veera Kumar</name>
-      <id>veerakumarak</id>
-    </developer>
-  </developers>
-
-<!--  <licenses>-->
-<!--    <license>-->
-<!--      <name>Apache License, Version 2.0</name>-->
-<!--      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>-->
-<!--      <distribution>repo</distribution>-->
-<!--    </license>-->
-<!--  </licenses>-->
-
-<!--  <build>-->
-<!--    <finalName>${project.artifactId}</finalName>-->
-<!--    <plugins>-->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-compiler-plugin</artifactId>-->
-<!--        <configuration>-->
-<!--          <source>11</source>-->
-<!--          <target>11</target>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -69,141 +60,62 @@
   </dependencies>
 
 
-  <properties>
-    <maven.compiler.version>3.7.0</maven.compiler.version>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <jacoco.version>0.7.9</jacoco.version>
-    <nexus.staging.version>1.6.8</nexus.staging.version>
-    <maven.release.version>2.5.3</maven.release.version>
-    <maven.source.version>3.0.1</maven.source.version>
-    <maven.javadoc.version>2.10.4</maven.javadoc.version>
-    <maven.gpg.version>1.6</maven.gpg.version>
-  </properties>
-
-
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.version}</version>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>0.5.0</version>
+        <extensions>true</extensions>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <publishingServerId>central</publishingServerId>
         </configuration>
       </plugin>
 
-      <!-- Automatic code coverage analysis on all builds -->
+      <!--            javadoc-->
       <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.version}</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.3.0</version>
         <executions>
           <execution>
-            <id>default-prepare-agent</id>
+            <id>attach-javadocs</id>
             <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>default-report</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>report</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-
-      <!-- Maven Central Release -->
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>${nexus.staging.version}</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>sonatype-nexus</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        </configuration>
-      </plugin>
+      <!--            source-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>${maven.release.version}</version>
-        <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-          <useReleaseProfile>false</useReleaseProfile>
-          <releaseProfiles>release</releaseProfiles>
-          <goals>deploy</goals>
-        </configuration>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!--            pom, .asc-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <profiles>
-    <profile>
-      <id>release</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>${maven.source.version}</version>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <goals>
-                  <goal>jar-no-fork</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>${maven.javadoc.version}</version>
-            <executions>
-              <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>${maven.gpg.version}</version>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
